--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <meta charset="UTF-8" />
-        <title> This be lit</title>
+        <title> Run Buddy</title>
     </head>
     <body>
         <!-- navigation -->
@@ -20,7 +21,7 @@
                         <a href= "#what-you-do">What You Do</a>
                     </li>
                     <li>
-                        <a href=#your-trainers">Your Trainers</a>
+                        <a href="#your-trainers">Your Trainers</a>
                     </li>
                     <li><a href="#reach-out">Reach Out</a></li>
                 </li>
