meet the trainers section

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
             </div>
 
             <div>
-                <h3>Step 1: <span> Fill Out the Form Above</span></h3> 
+                <h3><span>Step 1:  Fill Out the Form Above</span></h3> 
                 <p> You're already here, so why not?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-2.svg" alt="" />
-                <h3> Step 2: <span> Consult with One of Our Trainers. </span></h3>
+                <h3><span> Step 2: Consult with One of Our Trainers. </span></h3>
                 <p> Are you here to build muscle, lose weight, or just</p>
             </div>
 
@@ -106,10 +106,47 @@
         </div>
         </section>
 
+
         <!-- "meet the trainers" section-->
-        <section id="meet-the-trainers">
-            <h2>Meet The Trainers </h2>
-        </section>
+        <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet the Trainers</h2> 
+      
+        <article class="trainer">
+           <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+          <div class="trainer-bio text-left">
+           <h3> Arron Stephens</h3>
+           <h4> Speed/Strength</h4>
+           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate magnam magni eum natus ut quo dolorem, libero doloremque mollitia, dolores ex quisquam recusandae excepturi, odit ab? Deleniti doloribus cum qui!
+           </p>
+        </div>
+       </article>
+
+       <!--second trainer bio-->
+       <article class="trainer">
+           <div class="trainer-bio text-right">
+               <h3>Joanna Gill</h3> 
+               <h4>Endurance</h4>
+               <p>
+                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut odio quasi, autem ratione perspiciatis repellat maxime quis ipsum voluptatum facilis rem quae est, doloremque quas fugiat, iure eos. Exercitationem, aperiam.
+               </p>
+           </div>
+           <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+       </article>
+
+       <!--third trainer bio-->
+       <article class="trainer">
+           <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3> Harry "the Headband" Smith</h3>
+                <h4> Strength</h4>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum molestiae suscipit earum nam accusantium dolores nemo modi, qui sapiente enim deleniti corrupti nostrum voluptatem velit! Ad officia iusto odio consequatur.
+                </p>
+            </div>
+        </article>
+
+    </section>
+
 
         <!-- "reach out" section-->
         <section id="reach-out">
