--- a/index.html
+++ b/index.html
@@ -150,8 +150,29 @@
 
         <!-- "reach out" section-->
         <section id="reach-out">
-            <h2> Reach Out</h2>
+            <h2> Reach Out
+                <!--contact container-->
+                <div class="contact-info">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12897.686582661912!2d-86.95463815973694!3d36.08320838163889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886488f8692c1a31%3A0x98736185cf3ff578!2s8075%20Sawyer%20Brown%20Rd%2C%20Nashville%2C%20TN%2037221!5e0!3m2!1sen!2sus!4v1607828180914!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+            </h2>
+            <div>
+                <h3> Run Buddy </h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, CA <br/>
+                    12345 <br/>
+                    P: 555.RUN.BUDZ (555.786.2839) <br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
+
 
     </body>
 
